# mili

./: .gitignore  CHANGELOG.md  ImageViewer.py  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
guide/: animation.md  data.md  extra.md  guide.md  icon.md  mili.md  style.md  utility.md
mili/: __init__.py  __main__.py  _core.py  _coreutils.py  _richtext.py  animation.py  canva.py  data.py  error.py  guide.md  icon.py  mili.py  style.md  style.py  typing.py  utility.py
mili/_utils/: _context_menu.py  _entries.py  _interaction.py  _prefabs.py  _window.py
mili/demo/: demo.py
